enable preview features in jvm